manifests/twitter-profile-pic/twitter-profile-pic.yaml
apiVersion: v1
kind: Service
metadata:
  name: twitter-profile-pic
  namespace: twitter-profile-pic
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 9090
    name: web
  selector:
    app: twitter-profile-pic
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: twitter-profile-pic
  namespace: twitter-profile-pic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: twitter-profile-pic
  template:
    metadata:
      labels:
        app: twitter-profile-pic
    spec:
      containers:
      - name: web
        image: harbor.cluster.fun/averagemarcus/twitter-profile-pic:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 9090
          name: web
        resources:
          limits:
            memory: 250Mi
          requests:
            memory: 250Mi
        volumeMounts:
          - name: dotenv
            mountPath: /app/.env
            subPath: .env
      volumes:
      - name: dotenv
        secret:
          secretName: twitter-profile-pic
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: twitter-profile-pic
  namespace: twitter-profile-pic
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - twitter-profile-pic.marcusnoble.co.uk
    secretName: twitter-profile-pic-ingress
  rules:
  - host: twitter-profile-pic.marcusnoble.co.uk
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: twitter-profile-pic
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: twitter-profile-pic-jsox
  namespace: twitter-profile-pic
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - twitter-profile-pic.jsoxford.com
    secretName: twitter-profile-pic-jsox-ingress
  rules:
  - host: twitter-profile-pic.jsoxford.com
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: twitter-profile-pic
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: twitter-profile-pic-cluster-fun
  namespace: twitter-profile-pic
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - twitter-profile-pic.cluster.fun
    secretName: twitter-profile-pic-cluster-fun-ingress
  rules:
  - host: twitter-profile-pic.cluster.fun
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: twitter-profile-pic
            port:
              number: 80
